interlope/src/sample.h

#pragma once


void sample_init_cube();
void sample_draw_cube();